@@ -309,6 +309,7 @@ public class DefaultInputHandler extends InputHandler
 	{
 		char c = evt.getKeyChar();
 
+		System.err.println("Got a key typed: " + c + "," + (int)c);
 		// ignore
 		if(c == '\b')
 			return;
